Fix  context menu cut off by the edge of the screen issue

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -70,6 +70,7 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  user-select: none;
 }
 
 /* Style for vertical and horizontal scrollbars */
